tests/invalid/e001_lex_error.pak
-- EXPECT: E001
-- Unterminated string literal causes a lex error.

entry {
    let s: *c_char = "unterminated
}
